# QtWork

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  QtWork.pro
client/src/: chatwindow.cpp  chatwindow.h  main.cpp
client/src/communication/: Controller.cpp  Controller.h  Message.cpp  Message.h  MessageManager.cpp  MessageManager.h
client/src/entity/: Friend.h  Group.h  UserInfo.cpp  UserInfo.h
login/: Makefile  grpcser.cpp  grpcser.h  log.cpp  log.h  main.cpp  proxysocket.cpp  proxysocket.drawio  proxysocket.h  rediscon.h  server.cpp  server.h
login/grpcProto/: grpcProto.grpc.pb.cc  grpcProto.grpc.pb.h  grpcProto.pb.cc  grpcProto.pb.h
login/grpc_cli/: cli_login.cpp  cli_login.h  main.cpp
server/: go.mod  hello.go  main.go
server/controllor/: group.go  message.go  router.go  user.go
server/db/: hello.sql  im.db  im.sql
server/entity/: group.go  message.go  user.go
server/service/: group-manager.go  message-manager.go  online-manager.go  online-status.go  service.go  user-manager.go
sockettest/: Makefile  socketclient  socketclient.cpp  socketsever  socketsever.cpp  test  test.cpp
src/test/: testCxx20.cpp
